# openclaw-cert-cli

./: .env.example  .gitignore  Dockerfile  README.md  listener.py  openclaw_cert.py  pyproject.toml  setup.sh  start.sh  watchdog.sh  🦞 OpenClaw Master-Zertifizierungs-CLI
.github/prompts/: openclaw-cert-workflow.prompt.md
.github/workflows/: tests.yml
cert-cli-uc/: .env.example  .gitignore  README.md  openclaw_cert.py  start.sh
openclaw_cert/: __init__.py  __main__.py  api.py  cli.py  config.py  display.py  docs.py  reports.py  stream_tee.py  tasks.py
streams/: stream_1_Kernkonzepte_des_OpenClaw_Syst_20260408_223004.txt
tests/: conftest.py  test_api.py  test_cli.py  test_cli_args.py  test_config.py  test_display.py  test_listener.py  test_reports.py  test_run_task.py  test_status.py  test_stream_tee.py
